# cognitivenotte

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  settings.yml
docs/: Open Source STT Libraries Comparison.md  STT_Complete_Research_2026_01_30.md  conventions_python.md  project_requirements.md
docs/user_stories/: US-01_sound_acquisition.md  US-02_speech_transcription.md
scripts/: install.sh  smoke_tests.py
src/conot/: __init__.py  __main__.py  audio_meter.py  cli.py  config.py  debug_view.py  devices.py  exceptions.py  recorder.py
src/conot/stt/: __init__.py  config.py  diarization.py  exceptions.py  hardware.py  language_detector.py  models.py  protocol.py  registry.py  streaming.py  transcribe.py  vad.py
src/conot/stt/providers/: __init__.py  base.py  faster_whisper.py  qwen_asr.py  whisper_cpp.py
tests/: __init__.py  test_audio_meter.py  test_cli_helpers.py  test_config.py  test_debug_view.py  test_devices.py  test_stt_diarization.py  test_stt_exceptions.py  test_stt_hardware.py  test_stt_language_detector.py  test_stt_models.py  test_stt_providers.py  test_stt_qwen_asr.py  test_stt_registry.py  test_stt_streaming.py  test_stt_transcribe.py  test_stt_vad.py
